# Kori

./: CMakeLists.txt
Examples/: CMakeLists.txt  Stack.cpp
Include/Kori/: Core.hpp  Stack.hpp
examples/: CMakeLists.txt  stack.cpp
include/kori/: core.hpp  stack.hpp
